Fix for Overflow Behavior implementation
 - The Overflow Behavior implementation will no longer be in each gx-table-cell. Instead (as designed in the documentation) the implementation will be in the gx-table.

 - Rename "containerCell" mixin to "align-inner-control-in-cell".

 - Change "visibility(flex)" mixin to "display: flex" property in the "align-inner-control-in-cell" mixin, since the cells (gx-table-cell and gx-canvas-cell) do not have invisible-mode attribute.

 - Remove "overflowMode" mixin.

 - Added preliminary support for overflow-style gx-property in the gx-table control.

issue: 98521

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -5,6 +5,13 @@ gx-table {
   --elevation: 0;
   --grid-template-areas: unset;
 
+  /**
+   * @prop --gx-overflow-style: Determine if the overflow will be hidden or visible.
+   * By default, the gx-table hide its content overflow to ensure that the border-radius
+   * property is applied.
+   */
+  --gx-overflow-style: hidden;
+
   @include reset-variables();
   @include elevation();
   @include visibility(grid);
@@ -14,9 +21,17 @@ gx-table {
   // of the shorthand property "grid-template"
   grid-template-areas: var(--grid-template-areas);
   flex: 1;
-
-  // gx-table must hide its content overflow to ensure that the border-radius
-  // property is applied
-  overflow: hidden;
   @include transition-properties();
+
+  // - - - - - - - - - - - - - - - -
+  //   Overflow Behavior and Style
+  // - - - - - - - - - - - - - - - -
+  &.overflow-behavior--default,
+  &.overflow-behavior--default > gx-table-cell {
+    overflow: var(--gx-overflow-style);
+  }
+
+  &.overflow-behavior--scroll {
+    overflow-y: auto;
+  }
 }
